--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -8,6 +8,8 @@ on:
     paths:
       - 'react-node-demo/**'
       - '.github/workflows/deploy-production.yml'
+    paths-ignore:
+      - '**'  # Ignore all paths
   workflow_dispatch: # Allow manual trigger
 
 jobs:
