--- a/university-management/package.json
+++ b/university-management/package.json
@@ -25,7 +25,6 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@playwright/test": "^1.56.1",
-    "playwright": "^1.56.1"
+    "@playwright/test": "^1.56.1"
   }
 }
